# MemSentry

./: CMakeLists.txt  README.md  todo.md
include/mem_pools/: buffer.h  chain.h  pool.h
include/mem_sentry/: constants.h
tests/: CMakeLists.txt
tests/mem_pools/: CMakeLists.txt  test_buffer.cc  test_ringpool.cc
